# gpu-lifecycle-analysis

./: GPU_DATA.csv  README.md  index.html
Benchmark Code/MatMul/: matmul.sh  matmul_benchmark.py
Benchmark Code/TPCxAI/: TPCAIcalc.py  TPCx-AI_Benchmarkrun.sh  setenv.sh  val_script_h100.sh
Benchmark Code/sorting/: CMakeLists.txt  sort  sort.sh
Benchmark Code/sorting/src/: cuda_error.cuh  host_vector.cuh  sort.cu
assets/: index-4203_jME.js  index-AdtMNlyt.js  index-BefkOq8C.js  index-CP9WpNNG.js  index-CRa9ihHT.js  index-C_A3nQfC.js  index-Czq5vRTU.js  index-D5EBTYTp.js  index-DCD2lyOV.css  index-DbGxwudt.js  index-Dqr5oKY-.js  index-JGkQOCwA.js  index-d04ckGPs.js  index-nzCfVPYg.css  index-shASaVwB.js
benchmarks/: plot.py  sorting_results_2080ti.csv  sorting_results_a100.csv  sorting_results_a40.csv  sorting_results_b200.csv  sorting_results_v100.csv
constants/: EPA.csv  GPA.csv  MEMORY.csv  README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  style.css
frontend/src/assets/: countries.js  data.ts  grid_intensities.ts
frontend/src/charts/: lineChart.tsx
frontend/src/partials/: BenchmarkSettings.tsx  Compare.tsx  DetailedBreakdown.tsx  FurtherDetails.tsx  GeoMap.tsx
frontend/src/utility/: BenchmarkContext.tsx  ListItems.tsx  ToggleSelection.tsx  Tooltip.tsx  UtilityFunctions.ts  UtilizationInput.tsx  ValueSelection.tsx  descriptions.ts
frontend/src/utility/lifecycle_analysis/: comparison.ts  (+2 more)
lifecycle/: compare.py  constants.py  grid_intensities.py  system.py
notebooks/: README.md  plots.ipynb  trends.ipynb
